hopefully fixed alignment for profile.css

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -130,6 +130,7 @@
     font-size: 22px;
     line-height: 26.63px;
     margin: 0 0 5px 0;
+    width: 196px;
   }
   .profile__image {
     margin-right: 0;
